# latexifyplot

./: pyproject.toml
latexifyplot/: __init__.py  format_axes.py  latexify.py
